# django_tutorial

./: .secrets.yaml  Procfile  celerybeat-schedule  pyproject.toml  settings.yaml
.cursor/rules/: project-rules.mdc  structural.mdc
stock/: __init__.py  admin.py  celery.py  models.py  tests.py  urls.py  views.py
stock/management/commands/: runscheduler.py  runworker.py
stock/migrations/: 0001_initial.py
stock/service/: api.py  cron_service.py
stock/templates/stock/: index.html
todo/: urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/: home.html
todo/templates/todo/: index.html
todo_app/: asgi.py  settings.py  urls.py  wsgi.py
