[project]
name = "todo-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KimAn", email = "an.vu@icetea.io"},
]
dependencies = ["django>=5.2.5", "psycopg[binary]>=3.2.9", "dynaconf>=3.2.11", "honcho>=2.0.0", "black>=25.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
